--- a/src/renderer/assets/style/transitions.scss
+++ b/src/renderer/assets/style/transitions.scss
@@ -1,3 +1,14 @@
+/* Transitions */
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+
+
 /* Animation keyframes */
 .animate-warn {
   animation-delay: 1s;
